# BiobaseHTSTools

./: BiobaseHTSTools.cabal  README.md  changelog
Biobase/: Coverage.hs
Biobase/HTS/: Library.hs  SAMParser.hs
